--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -308,6 +308,7 @@
   <span>Detection, Resulting and Verification</span>
     <div class="spacer"></div>
     <div>
+      <button type="button" (click)="changeForm('/location')" class="btn btn-danger">Location</button>
       <button type="button" (click)="changeForm('/detection')" class="btn btn-danger">Detection</button>
       <button type="button" (click)="changeForm('/resulting')" class="btn btn-danger">Resulting</button>
       <button type="button" (click)="changeForm('/verification')" class="btn btn-danger">Verification</button>
