--- a/angular/src/app/view/resulting/resulting.component.html
+++ b/angular/src/app/view/resulting/resulting.component.html
@@ -1,6 +1,18 @@
 
 <div class="component"  style="width: 100%;">
     <h2>Resulting</h2>
+    <div class="row">
+        <div>
+            <button type="button" class="btn" (click)="toDetection()" >
+                <mat-icon aria-hidden="false" >keyboard_arrow_left</mat-icon>
+            </button>
+        </div>
+        <div>
+            <button type="button" class="btn" (click)="toVerification()" >
+                <mat-icon aria-hidden="false" >keyboard_arrow_right</mat-icon>
+            </button>
+        </div>
+    </div>
     <mat-tab-group id="detectionGroup" animationDuration="0ms" [selectedIndex]="selectedIndex">
         <!-- Editing a location -->
         <mat-tab label="Edit">
@@ -48,7 +60,7 @@
                                     name="resultingDateTime" id = "resultingDateTime" 
                                     #resultingDateTime="ngModel" required="true">                                
                             </mat-form-field>
-                            <button class="btn btn-success" (click)="now()">now</button>
+                            <button type="button" class="btn btn-success" (click)="now()">Now</button>
                         </div>
                     </div>
                     <div class="row"> 
