--- a/angular/src/app/view/verification/verification.component.html
+++ b/angular/src/app/view/verification/verification.component.html
@@ -150,11 +150,11 @@
                                 <mat-header-row *matHeaderRowDef="specimenColumns"></mat-header-row>
                                 <mat-row *matRowDef="let row; columns: specimenColumns;"></mat-row>            
                             </mat-table>
-                            <mat-paginator 
+                            <!--mat-paginator 
                                 #specimenPaginator="matPaginator" 
                                 [pageSize]="10" 
                                 [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons>
-                            </mat-paginator>
+                            </mat-paginator-->
                         </div>
                     </div>
                 </form>
