--- a/angular/src/app/view/login/login.component.html
+++ b/angular/src/app/view/login/login.component.html
@@ -20,7 +20,10 @@
               </button>
         </mat-form-field>
       </div>
-      <button class="btn btn-success" [disabled]="loginForm.invalid">Login</button>
+      <button class="btn btn-success" [disabled]="loginForm.invalid">
+        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+        Login
+      </button>
       <div *ngIf="invalidLogin" class="error">
         <div>Invalid credentials.</div>
       </div>
