--- a/angular/src/app/view/resulting/resulting.component.html
+++ b/angular/src/app/view/resulting/resulting.component.html
@@ -21,7 +21,10 @@
                     
                     <div class="row">  
                         <div class="form-group">  
-                            <button class="btn btn-success" [disabled]="resultingForm.invalid">Save</button>
+                            <button class="btn btn-success" [disabled]="resultingForm.invalid">
+                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                Save
+                            </button>
                         </div>
                     </div>
                     <div class="row">
@@ -186,7 +189,10 @@
                 </form>
             </div>
             <div class="form-group">  
-                <button class="btn btn-success" (click)="searchBatches()">Search</button>
+                <button class="btn btn-success" (click)="searchBatches()">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                    Search
+                </button>
                 <button type="button" class="btn btn-success" (click)="clearSearch()">Clear</button>
             </div>
             <div class="form-group">  
