--- a/angular/src/app/view/testing-detection/testing-detection.component.html
+++ b/angular/src/app/view/testing-detection/testing-detection.component.html
@@ -15,7 +15,10 @@
                         
                         <div class="row">  
                             <div class="form-group">  
-                                <button class="btn btn-success" [disabled]="saveForm.invalid">Save</button>
+                                <button class="btn btn-success" [disabled]="saveForm.invalid">
+                                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                    Save
+                                </button>
                             </div>
                             <div class="form-group">  
                                 <button class="btn btn-success" (click)="newDetectionBatch()">New</button>
@@ -180,7 +183,10 @@
                     </form>
                 </div>
                 <div class="form-group">  
-                    <button class="btn btn-success" (click)="searchBatches()">Search</button>
+                    <button class="btn btn-success" (click)="searchBatches()">
+                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                        Search
+                    </button>
                     <button type="button" class="btn btn-success" (click)="clearSearch()">Clear</button>
                 </div>
                 <div class="mat-elevation-z8">  
