--- a/angular/src/app/view/verification/verification.component.html
+++ b/angular/src/app/view/verification/verification.component.html
@@ -14,7 +14,10 @@
                 <form #resultingForm="ngForm" (ngSubmit)="saveVerificationBatch()">                    
                     <div class="row">  
                         <div class="form-group">  
-                            <button class="btn btn-success" [disabled]="resultingForm.invalid">Save</button>
+                            <button class="btn btn-success" [disabled]="resultingForm.invalid">
+                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                Save
+                            </button>
                         </div>
                         <div class="form-group">  
                             <button class="btn btn-success" [disabled]="verified()" (click)="publish()">Publish</button>
@@ -216,7 +219,10 @@
                 </form>
             </div>
             <div class="form-group">  
-                <button class="btn btn-success" (click)="searchBatches()">Search</button>
+                <button class="btn btn-success" (click)="searchBatches()">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                    Search
+                </button>
                 <button type="button" class="btn btn-success" (click)="clearSearch()">Clear</button>
             </div>
             <div class="mat-elevation-z8">  
