--- a/angular/src/app/view/resulting/resulting.component.html
+++ b/angular/src/app/view/resulting/resulting.component.html
@@ -16,12 +16,11 @@
     <mat-tab-group id="detectionGroup" animationDuration="0ms" [selectedIndex]="selectedIndex">
         <!-- Editing a location -->
         <mat-tab label="Edit">
-            <div class="col">
-                <form #resultingForm="ngForm" (ngSubmit)="saveResultingBatch()">
-                    
+            <form [formGroup]="resultingForm" (ngSubmit)="saveResultingBatch()" class="col">
+                <div>
                     <div class="row">  
                         <div class="form-group">  
-                            <button class="btn btn-success" [disabled]="resultingForm.invalid">
+                            <button class="btn btn-success" >
                                 <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                                 Save
                             </button>
@@ -31,16 +30,16 @@
                         <div class="form-group">
                             <mat-form-field>
                                 <mat-label>Batch Id</mat-label>
-                                <input matInput disabled
-                                [(ngModel)]="batch.batchId" name="batchId" id = "batchId" #batchId="ngModel" required="true">
+                                <input matInput formControlName="batchId" 
+                                    id = "batchId">
                             </mat-form-field>
                         </div>
                         <div class="form-group">        
-                            <div class="form-group">
+                            <div class="form-group" formGroupName="lab">
                                 <mat-form-field>
                                     <mat-label>Lab</mat-label>
-                                    <input matInput
-                                    [(ngModel)]="batch.lab.name" name="lab" id = "lab" #lab="ngModel" required="true" disabled="true">
+                                    <input matInput formControlName="name" 
+                                        id = "lab">
                                 </mat-form-field>
                             </div>  
                         </div>
@@ -49,51 +48,44 @@
                         <div class="form-group">
                             <mat-form-field>
                                 <mat-label>Resulting Personnel</mat-label>
-                                <input matInput  disabled = "true"
-                                    [(ngModel)]="batch.resultingPersonnel" 
-                                    name="resultingPersonnel" id = "resultingPersonnel" 
-                                    #resultingPersonnel="ngModel" required="false">
+                                <input matInput formControlName="resultingPersonnel" 
+                                    id = "resultingPersonnel" 
+                                    required="false">
                             </mat-form-field>
                         </div>
                         <div class="form-group">
                             <mat-form-field>
                                 <mat-label>Resulting Datetime</mat-label>                                
-                                <input matInput disabled = "true"
-                                    [(ngModel)]="batch.resultingDateTime" 
-                                    name="resultingDateTime" id = "resultingDateTime" 
-                                    #resultingDateTime="ngModel" required="true">                                
+                                <input matInput formControlName="resultingDateTime" 
+                                    id = "resultingDateTime" 
+                                    required="true">                                
                             </mat-form-field>
                             <button type="button" class="btn btn-success" (click)="now()">Now</button>
                         </div>
                     </div>
                     <div class="row"> 
                         <div class="form-group">          
-                            <mat-form-field>
-                                <mat-label>Instrument</mat-label>    
-                                <mat-select [formControl]="instrumentControl" disabled="true">
-                                    <mat-option value="new Instrument('', '')" selected></mat-option>  
-                                    <mat-option *ngFor="let instrument of instruments" [value]="instrument.code">
-                                        {{ instrument.name }}
-                                    </mat-option>
-                                </mat-select>    
+                            <mat-form-field formGroupName="instrument">
+                                <mat-label>Instrument</mat-label>                              
+                                <input matInput formControlName="name" 
+                                    id = "instrument">
                             </mat-form-field>
                         </div>
                         <div class="form-group">
                             <mat-form-field>
                                 <mat-label>Batch Size</mat-label>
                                 <input matInput
-                                    [(ngModel)]="batch.instrumentBatchSize" 
-                                    name="instrumentBatchSize" id = "instrumentBatchSize" 
-                                    #instrumentBatchSize="ngModel" required="true" disabled = "true">
+                                    formControlName="instrumentBatchSize" 
+                                    id = "instrumentBatchSize" style="text-align: right">
                             </mat-form-field>
                         </div>
                     </div>
                     <div class="form-group">          
                         <mat-form-field>
                             <mat-label>Resulting Status</mat-label>
-                            <mat-select [(ngModel)]="batch.detectionStatus" 
-                                    name="detectionStatus" id = "detectionStatus" 
-                                    #detectionStatus="ngModel" required="true">
+                            <mat-select formControlName="resultingStatus" 
+                                    id = "resultingStatus" 
+                                    required="true">
                                 <mat-option value=""></mat-option>
                                 <mat-option value="0" selected>Incomplete</mat-option>
                                 <mat-option value="1" selected>Unverified</mat-option>
@@ -102,36 +94,33 @@
                         </mat-form-field>
                     </div>
                     <div>
-                        <div class="mat-elevation-z8 specimen-list"> 
-                            <mat-table [dataSource]="specimen" class="table table-bordered table-striped" style="width: 100%;">
+                        <ng-container class="mat-elevation-z8 specimen-list"> 
+                            <mat-table [dataSource]="batchItems.controls" class="table table-bordered table-striped" style="width: 100%;">
                                 <ng-container matColumnDef="position">
                                     <mat-header-cell *matHeaderCellDef>Position</mat-header-cell>
-                                    <mat-cell *matCellDef="let row"> {{ row.position }} </mat-cell>
+                                    <mat-cell *matCellDef="let row" > {{ row.get('position').value }} </mat-cell>
                                 </ng-container>
                                 <ng-container matColumnDef="specimen_barcode">
                                     <mat-header-cell *matHeaderCellDef>Specimen Barcode</mat-header-cell>
-                                    <mat-cell *matCellDef="let row"> {{ row.specimen_barcode }} </mat-cell>
+                                    <mat-cell *matCellDef="let row"> {{ row.get('specimen_barcode').value }} </mat-cell>
                                 </ng-container>
                                 <ng-container matColumnDef="patient_first_name">
                                     <mat-header-cell *matHeaderCellDef>Patient Name</mat-header-cell>
-                                    <mat-cell *matCellDef="let row"> {{ row.patient.patient_first_name }} </mat-cell>
+                                    <mat-cell *matCellDef="let row"> {{ row.get('patient.patient_first_name').value }} </mat-cell>
                                 </ng-container>
                                 <ng-container matColumnDef="patient_surname">
                                     <mat-header-cell *matHeaderCellDef>Patient Surname</mat-header-cell>
-                                    <mat-cell *matCellDef="let row"> {{ row.patient.patient_surname }} </mat-cell>
+                                    <mat-cell *matCellDef="let row"> {{ row.get('patient.patient_surname').value }} </mat-cell>
                                 </ng-container>
                                 <ng-container matColumnDef="identity_no">
                                     <mat-header-cell *matHeaderCellDef>Patient Id</mat-header-cell>
-                                    <mat-cell *matCellDef="let row"> {{ row.patient.identity_no }} </mat-cell>
+                                    <mat-cell *matCellDef="let row"> {{ row.get('patient.identity_no').value }} </mat-cell>
                                 </ng-container>
                                 <ng-container matColumnDef="testAssayResults">
                                     <mat-header-cell *matHeaderCellDef>Assay Results</mat-header-cell>
-                                    <!--mat-cell *matCellDef="let row"> {{ row.testAssayResults }} </mat-cell-->
-                                    <mat-cell *matCellDef="let row">
+                                    <mat-cell *matCellDef="let row" [formGroup]="row">
                                         <mat-form-field>
-                                            <mat-select [(ngModel)]="row.testAssayResults" (selectionChange)="selectChangeHandler(row, $event)"
-                                                    name="testAssayResults" id = "testAssayResults" 
-                                                    #testAssayResults="ngModel" required="true">
+                                            <mat-select formControlName="testAssayResults" id = "testAssayResults" required="true" value = "row.testAssayResults">
                                                 <mat-option value=""></mat-option>
                                                 <mat-option value="1" selected>Positive</mat-option>
                                                 <mat-option value="2" selected>Negative</mat-option>
@@ -144,16 +133,10 @@
                                 <mat-header-row *matHeaderRowDef="specimenColumns"></mat-header-row>
                                 <mat-row *matRowDef="let row; columns: specimenColumns;"></mat-row>            
                             </mat-table>
-                            <!--mat-paginator 
-                                #SpecimenPaginator="matPaginator" 
-                                [length]="specimen.data.length" 
-                                [pageSize]="10" 
-                                [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons>
-                            </mat-paginator-->
-                        </div>
+                        </ng-container>
                     </div>
-                </form>
-            </div>
+                </div>
+            </form>
         </mat-tab>
 
         <!-- Searching a location -->
