--- a/angular/src/app/view/verification/verification.component.html
+++ b/angular/src/app/view/verification/verification.component.html
@@ -11,7 +11,7 @@
         <!-- Editing a location -->
         <mat-tab label="Edit">
             <div class="col">
-                <form #resultingForm="ngForm" (ngSubmit)="saveVerificationBatch()">                    
+                <form [formGroup]="verificationForm" (ngSubmit)="saveVerificationBatch()">                    
                     <div class="row">  
                         <div class="form-group">  
                             <button class="btn btn-success" [disabled]="resultingForm.invalid">
@@ -27,16 +27,14 @@
                         <div class="form-group">
                             <mat-form-field>
                                 <mat-label>Batch Id</mat-label>
-                                <input matInput disabled
-                                [(ngModel)]="batch.batchId" name="batchId" id = "batchId" #batchId="ngModel">
+                                <input matInput formControlName="batchId" id = "batchId">
                             </mat-form-field>
                         </div>
                         <div class="form-group">        
-                            <div class="form-group">
+                            <div class="form-group" formGroupName="lab">
                                 <mat-form-field>
                                     <mat-label>Lab</mat-label>
-                                    <input matInput
-                                        [(ngModel)]="batch.lab.name" name="lab" id = "lab" #lab="ngModel" disabled="true">
+                                    <input matInput formControlName="name" id = "lab">
                                 </mat-form-field>
                             </div>  
                         </div>
@@ -45,19 +43,13 @@
                         <div class="form-group">
                             <mat-form-field>
                                 <mat-label>Verification Personnel</mat-label>
-                                <input matInput  disabled = "true"
-                                    [(ngModel)]="batch.verificationPersonnel" 
-                                    name="verificationPersonnel" id = "verificationPersonnel" 
-                                    #verificationPersonnel="ngModel" required="false">
+                                <input matInput formControlName="verificationPersonnel" id = "verificationPersonnel">
                             </mat-form-field>
                         </div>
                         <div class="form-group">
                             <mat-form-field>
                                 <mat-label>Verification Datetime</mat-label>                                
-                                <input matInput disabled = "true"
-                                    [(ngModel)]="batch.verificationDateTime" 
-                                    name="verificationDateTime" id = "verificationDateTime" 
-                                    #verificationDateTime="ngModel" required="true">                                
+                                <input matInput formControlName="verificationDateTime" id = "verificationDateTime">                                
                             </mat-form-field>
                             <button type="button" class="btn btn-success" (click)="now()">Now</button>
                         </div>
@@ -66,51 +58,37 @@
                         <div class="form-group">
                             <mat-form-field>
                                 <mat-label>Authorising Personnel</mat-label>
-                                <input matInput  disabled = "true"
-                                    [(ngModel)]="batch.authorisingPersonnel" 
-                                    name="authorisingPersonnel" id = "authorisingPersonnel" 
-                                    #authorisingPersonnel="ngModel" required="false">
+                                <input matInput formControlName="authorisingPersonnel" id = "authorisingPersonnel" >
                             </mat-form-field>
                         </div>
                         <div class="form-group">
                             <mat-form-field>
                                 <mat-label>Authorising Datetime</mat-label>                                
-                                <input matInput disabled = "true"
-                                    [(ngModel)]="batch.authorisingDateTime" 
-                                    name="authorisingDateTime" id = "authorisingDateTime" 
-                                    #authorisingDateTime="ngModel">                                
+                                <input matInput formControlName="authorisingDateTime" id = "authorisingDateTime" >                                
                             </mat-form-field>
                             <button type="button" class="btn btn-success" (click)="authorise()">Now</button>
                         </div>
                     </div>
                     <div class="row"> 
                         <div class="form-group">          
-                            <mat-form-field>
+                            <mat-form-field formGroupName="instrument">
                                 <mat-label>Instrument</mat-label>        
-                                <mat-select [formControl]="instrumentControl" disabled="true">
-                                    <mat-option value="new Instrument('', '')" selected></mat-option>  
-                                    <mat-option *ngFor="let instrument of instruments" [value]="instrument.code">
-                                        {{ instrument.name }}
-                                    </mat-option>
-                                </mat-select>   
+                                <input matInput formControlName="name" 
+                                    id = "instrument">   
                             </mat-form-field>
                         </div>
                         <div class="form-group">
                             <mat-form-field>
                                 <mat-label>Batch Size</mat-label>
                                 <input matInput
-                                    [(ngModel)]="batch.instrumentBatchSize" 
-                                    name="instrumentBatchSize" id = "instrumentBatchSize" 
-                                    #instrumentBatchSize="ngModel" required="true" disabled = "true">
+                                    formControlName="instrumentBatchSize" id = "instrumentBatchSize" >
                             </mat-form-field>
                         </div>
                     </div>
                     <div class="form-group">          
                         <mat-form-field>
                             <mat-label>Verification Status</mat-label>
-                            <mat-select [(ngModel)]="batch.verificationStatus" 
-                                    name="verificationStatus" id = "verificationStatus" 
-                                    #verificationStatus="ngModel" required="true">
+                            <mat-select formControlName="verificationStatus" id = "verificationStatus" >
                                 <mat-option value=""></mat-option>
                                 <mat-option value="0" selected>Incomplete</mat-option>
                                 <mat-option value="1" selected>Unverified</mat-option>
